--- a/src/assets/styles/blocks/main.scss
+++ b/src/assets/styles/blocks/main.scss
@@ -1,6 +1,6 @@
 .main {
     width: 100%;
-    height: 1200px;
+    min-height: 1200px;
     flex-grow: 1;
     display: flex;
     justify-content: center;
@@ -8,6 +8,8 @@
     position: relative;
 
     &__container {
+        height: 100%;
+        min-height: 1200px;
         box-shadow: 0px 0px 5px -2px rgba(34, 60, 80, 0.2);
         position: relative;
     }
