исправление ошибок валидации, добавлен полифил для работы fetch в IE, редактирование Readme

--- a/src/assets/styles/blocks/header.scss
+++ b/src/assets/styles/blocks/header.scss
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     height: 100px;
-    background: #eee;
+    background: $FootBgColor;
     padding: 0 15px;
     display: flex;
     justify-content: center;
