--- a/src/assets/styles/blocks/navigation.scss
+++ b/src/assets/styles/blocks/navigation.scss
@@ -1,9 +1,8 @@
 .navigation {
-    width: 300px;
-    border-right: 1px solid #bebebe;
+    border-right: 1px solid $BorderColor;
     padding: 10px 0px;
     position: relative;
-    background: #FFFFFF;
+    background: $BgColor;
 
     @media (max-width: 980px) {
         position: absolute;
@@ -16,12 +15,11 @@
         width: 100%;
         height: 100%;
         position: fixed;
-        background: rgba(#000, 0.7);
+        background: rgba($TextColor, 0.7);
     }
 
     &__list {
         width: 300px;
-        border-right: 1px solid #bebebe;
         display: flex;
         flex-direction: column;
         row-gap: 10px;
@@ -40,7 +38,7 @@
         border-radius: 5px;
 
         &:hover {
-            background: #eee;
+            background: $FootBgColor;
 
             & .navigation__link {
                 text-decoration: underline;
@@ -52,7 +50,7 @@
         width: 100%;
         height: 100%;
         display: block;
-        color: #4b4b4b;
+        color: $LinkColor;
         text-decoration: none;
         cursor: pointer;
         display: flex;
@@ -63,7 +61,7 @@
         font-weight: 600;
 
         &:hover {
-            background: #eee;
+            background: $FootBgColor;
             text-decoration: underline;
 
         }
