--- a/src/assets/styles/blocks/false-navigation.scss
+++ b/src/assets/styles/blocks/false-navigation.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(#000, 0.7);
+    background: rgba($TextColor, 0.7);
     position: fixed;
     top: 0;
     left: 0;
@@ -14,7 +14,7 @@
         width: 300px;
         height: 100%;
         padding: 10px 0px;
-        background: #FFFFFF;
+        background: $BgColor;
         z-index: 10;
         position: absolute;
         left: -300px;
@@ -41,7 +41,7 @@
         border-radius: 5px;
 
         &:hover {
-            background: #eee;
+            background: $FootBgColor;
 
             & .navigation__link {
                 text-decoration: underline;
@@ -53,7 +53,7 @@
         width: 100%;
         height: 100%;
         display: block;
-        color: #4b4b4b;
+        color: $LinkColor;
         text-decoration: none;
         cursor: pointer;
         display: flex;
@@ -64,7 +64,7 @@
         font-weight: 600;
 
         &:hover {
-            background: #eee;
+            background: $FootBgColor;
             text-decoration: underline;
         }
     }
