--- a/src/assets/styles/blocks/footer.scss
+++ b/src/assets/styles/blocks/footer.scss
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
     height: 200px;
-    background: #eee;
+    background: $FootBgColor;
     display: flex;
     justify-content: center;
     padding: 0 15px;
@@ -25,7 +25,7 @@
         justify-content: center;
         align-items: center;
         cursor: pointer;
-        background: #a9a9a9;
+        background: $ButtonColor;
         border-radius: 5px;
 
         &:hover {
