--- a/src/assets/styles/blocks/modal.scss
+++ b/src/assets/styles/blocks/modal.scss
@@ -10,7 +10,7 @@
     &__bg {
         width: 100%;
         height: 100%;
-        background: rgba($color: #000000, $alpha: 0.5);
+        background: rgba($color: $TextColor, $alpha: 0.5);
         position: absolute;
         display: flex;
         align-items: center;
@@ -19,7 +19,7 @@
     }
 
     &__container {
-        background: #FFFFFF;
+        background: $BgColor;
         width: 100%;
         max-width: 450px;
         max-height: 95%;
@@ -66,13 +66,13 @@
     &__required {
         font-size: 16px;
         font-weight: 600;
-        color: #ff0000;
+        color: $ErrorColor;
     }
 
     &__input {
         width: 100%;
         padding: 10px;
-        border: 1px solid #bebebe;
+        border: 1px solid $BorderColor;
         border-radius: 5px;
 
         &:focus::-webkit-input-placeholder {
@@ -90,7 +90,7 @@
 
     &__item-error {
         font-size: 12px;
-        color: #ff0000;
+        color: $ErrorColor;
         position: absolute;
         bottom: -18px;
     }
@@ -143,7 +143,7 @@
         justify-content: center;
         align-items: center;
         cursor: pointer;
-        background: #a9a9a9;
+        background: $ButtonColor;
         border-radius: 5px;
 
         &:hover {
@@ -161,7 +161,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: #ffffff;
+        background: $BgColor;
         color: #008000;
         display: none;
         align-items: center;
@@ -177,6 +177,7 @@
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
+    appearance: none;
     -webkit-appearance: none;
 }
 
