--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap');
+@import "./utils/variables.scss";
 @import "./blocks/header.scss";
 @import "./blocks/main.scss";
 @import "./blocks/footer.scss";
@@ -7,8 +8,8 @@
 @import "./blocks/false-navigation.scss";
 
 * {
-    font-size: 14px;
-    font-family: "Open Sans";
+    font-size: $DefaultFontSize;
+    font-family: $MyFont;
     margin: 0;
     padding: 0;
     border: none;
